# face_v6.0

face_6.0/: CMakeLists.txt  face_Factory.cpp  face_Factory.hpp  master.cpp
face_6.0/Faces_DB/: test.xml
